--- a/requirements.txt
+++ b/requirements.txt
@@ -7,8 +7,10 @@ attrs==21.4.0
 backcall==0.2.0
 beautifulsoup4==4.11.1
 bleach==5.0.0
+branca==0.5.0
 certifi==2021.10.8
 cffi==1.15.0
+charset-normalizer==2.0.12
 debugpy==1.6.0
 decorator==5.1.1
 defusedxml==0.7.1
@@ -21,6 +23,8 @@ entrypoints==0.4
 executing==0.8.3
 fastjsonschema==2.15.3
 filelock==3.6.0
+folium==0.12.1.post1
+idna==3.3
 ipykernel==6.12.1
 ipython==8.2.0
 ipython-genutils==0.2.0
@@ -42,6 +46,7 @@ nbconvert==6.4.5
 nbformat==5.3.0
 nest-asyncio==1.5.5
 notebook==6.4.10
+numpy==1.22.4
 packaging==21.3
 pandocfilters==1.5.0
 parso==0.8.3
@@ -66,6 +71,7 @@ pytz==2022.1
 pyzmq==22.3.0
 qtconsole==5.3.0
 QtPy==2.0.1
+requests==2.28.0
 Send2Trash==1.8.0
 six==1.16.0
 soupsieve==2.3.2
@@ -75,6 +81,7 @@ terminado==0.13.3
 testpath==0.6.0
 tornado==6.1
 traitlets==5.1.1
+urllib3==1.26.9
 virtualenv==20.14.0
 virtualenv-clone==0.5.7
 wcwidth==0.2.5
